tests/dataset/tpc-ds/compiler/kotlin/q49.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q49.kt:30:12: error: unresolved reference: concat
val tmp = (concat(run {
           ^
